ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:4:15
  |
4 | var ANY = ANY typeof ;    //expect error
  |               ^^^^^^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:4:22
  |
4 | var ANY = ANY typeof ;    //expect error
  |                      ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/typeofOperator/typeofOperatorInvalidOperations/input.ts:7:19
  |
7 | var ANY1 = typeof ;
  |                   ^

